<resources>
    <string name="app_name">Brain test</string>
    <string name="welcome_picture">welcome_picture</string>
    <string name="start_button_text">Start</string>
    <string name="send_answers">Send</string>
    <string name="back_to_greeting">Back</string>
    <string name="result_title">Your result:</string>
    <string name="result_balls_template">from</string>
    <string name="new_quiz">Start again</string>
    <string name="birth_button_title">Birthday</string>
    <string name="birth_dialog_picker_title">Your birthday</string>
    <string name="date_format">MM-dd-yy</string>
</resources>